2. Design Patterns/1. Creational/Factory/Examples/1. MyPizza/Good/MyPizza_Good_SimpleFactory/CheesePizza.cs
namespace MyPizza_Good_SimpleFactory
{
    internal class CheesePizza : Pizza
    {
    }
}